--- a/Platformer/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer/Platformer.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Platformer.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
