added camera for Dino

--- a/Platformer/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer/Platformer.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Platformer.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
