--- a/Platformer/Platformer/Platformer.vcxproj
+++ b/Platformer/Platformer/Platformer.vcxproj
@@ -171,6 +171,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="Platformer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
