--- a/Platformer/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer/Platformer.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="camera.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="speech.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
